--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         		<script type="text/javascript" src="//code.jquery.com/jquery-1.11.3.min.js"></script>
 		<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
 		<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-route.min.js"></script>
-
+        <script type="text/javascript" src="gamFiddlerResponse.js"></script>
         <script type="text/javascript" src="script/app.js"></script>
         
         </body>
